-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-ppc-aix
-
Component/s: hotspot
-
None
-
master
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8033040 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b04 |
| JDK-8045342 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8038540 | 8u20 | Goetz Lindenmaier | P4 | Resolved | Fixed | b08 |
| JDK-8053451 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
This change contains a row of smaller shared changes required to build the C2 compiler on PPC64.
- fixes for aix build
- make some methods public we need to call
- use RegL for Vectors
- some new utility methods
---------------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0121_basic_C2_adaptions_for_ppc.patch
- fixes for aix build
- make some methods public we need to call
- use RegL for Vectors
- some new utility methods
---------------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0121_basic_C2_adaptions_for_ppc.patch
- backported by
-
JDK-8033040 PPC64: (part 121): smaller shared changes needed to build C2
-
- Resolved
-
-
JDK-8038540 PPC64: (part 121): smaller shared changes needed to build C2
-
- Resolved
-
-
JDK-8045342 PPC64: (part 121): smaller shared changes needed to build C2
-
- Resolved
-
-
JDK-8053451 PPC64: (part 121): smaller shared changes needed to build C2
-
- Resolved
-