8028767: PPC64: (part 121): smaller shared changes needed to build C2

Smaller shared changes required to build the C2 compiler on PPC64.

Reviewed-by: kvn